@@ -970,13 +970,6 @@ typedef LPWSAPROTOCOL_INFOA LPWSAPROTOCOL_INFO;
 #define TH_NETDEV	0x00000001
 #define TH_TAPI	0x00000002
 
-#define WSAMAKEASYNCREPLY(buflen,error) MAKELONG(buflen,error)
-#define WSAMAKESELECTREPLY(event,error)     MAKELONG(event,error)
-#define WSAGETASYNCBUFLEN(lParam)           LOWORD(lParam)
-#define WSAGETASYNCERROR(lParam)            HIWORD(lParam)
-#define WSAGETSELECTEVENT(lParam)           LOWORD(lParam)
-#define WSAGETSELECTERROR(lParam)           HIWORD(lParam)
-
 SOCKET WINAPI WSAAccept(SOCKET, struct sockaddr *, LPINT, LPCONDITIONPROC, DWORD);
 INT WINAPI WSAAddressToStringA(LPSOCKADDR, DWORD, LPWSAPROTOCOL_INFOA, LPSTR, LPDWORD);
 INT WINAPI WSAAddressToStringW(LPSOCKADDR, DWORD, LPWSAPROTOCOL_INFOW, LPWSTR, LPDWORD);
